Fix vertical alignment of REPL indicator

--- a/_sass/light-style/_code.scss
+++ b/_sass/light-style/_code.scss
@@ -109,7 +109,7 @@ pre.editor {
 pre.repl {
   padding-left: 1.5em;
 
-  &:before {
+  & code:before {
     content: ">";
     opacity: 0.5;
     font-weight: bold;
